fix: FlexibleApproach on mobile: circle is not centered

--- a/src/modules/AboutUs/style.scss
+++ b/src/modules/AboutUs/style.scss
@@ -2,6 +2,8 @@
 
 .aboutUs {
 	&__title {
+		display: block;
+
 		& h2 {
 			display: flex;
 			width: 100%;
