--- a/src/modules/FlexibleApproach/style.scss
+++ b/src/modules/FlexibleApproach/style.scss
@@ -106,19 +106,22 @@
 		overflow-x: hidden;
 
 		&__photoWrapper {
-			width: vw(340px, $mvw);
-			height: vw(340px, $mvw);
+			width: calc(100% - vw(32px, $mvw));
 			margin-left: vw(16px, $mvw);
-			padding: vw(48px, $mvw);
+			padding-top: calc(100% - vw(32px, $mvw));
+			position: relative;
 		}
 
 		&__photo {
-			width: vw(247px, $mvw);
+			position: absolute;
+			left: vw(48px, $mvw);
+			right: vw(48px, $mvw);
+			bottom: vw(48px, $mvw);
 		}
 
 		&__content {
-			margin-top: vw(-356px, $mvw);
-			padding: vw(386px, $mvw) vw(16px, $mvw) vw(64px, $mvw);
+			margin-top: vw(-354px, $mvw);
+			padding: vw(384px, $mvw) vw(16px, $mvw) vw(64px, $mvw);
 			border-radius: vw(400px, $mvw) vw(400px, $mvw) 0 0;
 			background-color: $celestial;
 		}
